--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@remotion/captions": "4.0.232",
     "@remotion/cli": "^4.0.230",
     "@remotion/media-utils": "^4.0.230",
     "@remotion/player": "^4.0.230",
@@ -14,6 +15,7 @@
     "openai": "^4.72.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "remotion": "^4.0.230",
